[package]
name = "biljard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.18"
pollster = "0.3.0"
wgpu = "0.16.1"
winit = "0.28.6"
bytemuck = { version = "1.12", features = [ "derive" ] }
anyhow = "1.0.71"
cgmath = "0.18.0"
fs_extra = "1.3.0"
glob = "0.3.1"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
